--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
+aiogram==2.24
+aiohttp==3.8.3
+aiosignal==1.3.1
 anyio==3.6.2
+async-timeout==4.0.2
+attrs==22.2.0
+Babel==2.11.0
 certifi==2022.12.7
-charset-normalizer==2.1.1
+charset-normalizer==3.0.1
+fake-useragent==1.1.1
+frozenlist==1.3.3
+greenlet==2.0.1
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
 idna==3.4
-python-telegram-bot==20.0
+magic-filter==1.0.9
+multidict==6.0.4
+python-dotenv==0.21.0
+pytz==2022.7
 requests==2.28.1
-rfc3986==1.5.0
+rfc3986==2.0.0
 sniffio==1.3.0
+SQLAlchemy==1.4.46
 urllib3==1.26.13
+yarl==1.8.2
